# isosm3sum

./: .gitignore  CMakeLists.txt  README.md
docs/: checkisosm3.1  implantisosm3.1
include/: config.h  config.h.in  libcheckisosm3.h  libimplantisosm3.h  sm3.h  utilities.h
misc/: isosm3sum.spec.in
scripts/: generate-srpm.sh
src/: checkisosm3.c  implantisosm3.c  isosm3sum.pc.in  libcheckisosm3.c  libimplantisosm3.c  pyisosm3sum.c  sm3.c  utilities.c
test/: testpyisosm3sum.py
